// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuButton /> when an icon is passed with iconSize passes an icon method to fabric that returns an Icon with the passed size 1`] = `
<Reply
  block={true}
  size="12"
/>
`;

exports[`<MenuButton /> when an icon is passed without iconSize passes an icon method to fabric that returns an Icon with a default size of LARGE 1`] = `
<Reply
  block={true}
  size="20"
/>
`;

exports[`<MenuButton /> with additional classnames matches its snapshot 1`] = `
<CustomizedIconButton
  ariaLabel="testAria"
  className="y-menu-button y-menu-button--20 TEST-ADDITIONAL-CLASSNAME"
  menuProps={
    Object {
      "calloutProps": Object {
        "className": "y-menu-button--callout",
      },
      "contextualMenuItemAs": [Function],
      "items": Array [
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 0,
          "key": "test1",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 2,
          "key": "test2",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test3",
          "name": "test",
          "onClick": undefined,
          "target": "_blank",
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test4",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
      ],
    }
  }
  onRenderIcon={[Function]}
  onRenderMenuIcon={[Function]}
/>
`;

exports[`<MenuButton /> with all props matches its snapshot 1`] = `
<CustomizedIconButton
  ariaLabel="testAria"
  className="y-menu-button y-menu-button--20 TEST-ADDITIONAL-CLASSNAME"
  menuProps={
    Object {
      "calloutProps": Object {
        "className": "y-menu-button--callout",
      },
      "contextualMenuItemAs": [Function],
      "items": Array [
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 0,
          "key": "test1",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 2,
          "key": "test2",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test3",
          "name": "test",
          "onClick": undefined,
          "target": "_blank",
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test4",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
      ],
    }
  }
  onRenderIcon={[Function]}
  onRenderMenuIcon={[Function]}
/>
`;

exports[`<MenuButton /> with default options matches its snapshot 1`] = `
<CustomizedIconButton
  ariaLabel="testAria"
  className="y-menu-button y-menu-button--20"
  menuProps={
    Object {
      "calloutProps": Object {
        "className": "y-menu-button--callout",
      },
      "contextualMenuItemAs": [Function],
      "items": Array [
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 0,
          "key": "test1",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 2,
          "key": "test2",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test3",
          "name": "test",
          "onClick": undefined,
          "target": "_blank",
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test4",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
      ],
    }
  }
  onRenderIcon={[Function]}
  onRenderMenuIcon={[Function]}
/>
`;

exports[`<MenuButton /> with default options passes a menu icon method to fabric that returns null to replace the chevron down icon 1`] = `null`;

exports[`<MenuButton /> with default options passes an icon method to fabric that defaults to the More icon with size large 1`] = `
<More
  block={true}
  size="20"
/>
`;

exports[`<MenuButton /> with default options passes contextualMenuItemAs method to fabric that returns a MenuButtonItem 1`] = `<MenuButtonItem />`;
